--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_application"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_application_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFoodOrder"
         tools:targetApi="31">
@@ -20,7 +20,7 @@
             android:name=".views.activities.EditProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".views.activities.SplashActivity"
+            android:name=".views.activities.GetStartedActivity"
             android:exported="false" />
         <activity
             android:name=".views.activities.OrderDetailActivity"
@@ -35,7 +35,7 @@
             android:name=".views.activities.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".views.activities.GetStartedActivity"
+            android:name=".views.activities.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
